--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,10 @@
+@import "./tokens.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: hsl(var(--color-bg));
+  color: hsl(var(--color-text));
+}
