--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,8 @@
 @import "./tokens.css";
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 body {
+  @apply m-0;
   background-color: hsl(var(--color-bg));
   color: hsl(var(--color-text));
   font-family: var(--font-sans);
